--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.821.0",
