--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
   "keywords": [],
   "author": "Bryan Nakache",
   "license": "MIT",
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.821.0",
     "@aws-sdk/lib-dynamodb": "^3.821.0"
