--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -80,10 +80,12 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'ca-central-1'
           BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET }}
+          LAMBDA_NAME: ${{ secrets.LAMBDA_FUNCTION_NAME }}
         run: |
           terraform import aws_s3_bucket.frontend_bucket "$BUCKET_NAME" || true
           terraform import aws_iam_role.lambda_exec lambda_exec_role || true
           terraform import aws_dynamodb_table.history_table AirCareHistoryAQI || true
+          terraform import aws_lambda_function.aircare_backend "$LAMBDA_NAME" || true
 
       - name: Terraform Apply
         working-directory: ./terraform
