--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -71,6 +71,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'ca-central-1'
+          TF_VAR_openweather_api_key: ${{ secrets.OPENWEATHER_APIKEY }}
         run: terraform init -input=false
 
       - name: Import existing AWS resources
@@ -81,6 +82,7 @@ jobs:
           AWS_REGION: 'ca-central-1'
           BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET }}
           LAMBDA_NAME: ${{ secrets.LAMBDA_FUNCTION_NAME }}
+          TF_VAR_openweather_api_key: ${{ secrets.OPENWEATHER_APIKEY }}
         run: |
           terraform import aws_s3_bucket.frontend_bucket "$BUCKET_NAME" || true
           terraform import aws_iam_role.lambda_exec lambda_exec_role || true
@@ -93,6 +95,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'ca-central-1'
+          TF_VAR_openweather_api_key: ${{ secrets.OPENWEATHER_APIKEY }}
         run: terraform apply -auto-approve
 
       - name: Deploy Lambda function
