--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,17 +83,23 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'ca-central-1'
+          TF_VAR_openweather_api_key: ${{ secrets.OPENWEATHER_APIKEY }}
         run: terraform init -input=false
 
       - name: 🔄 Terraform Import Resources (idempotent)
         working-directory: ./terraform
+        env:
+          TF_VAR_openweather_api_key: ${{ secrets.OPENWEATHER_APIKEY }}
         run: |
           terraform import aws_s3_bucket.frontend_bucket "${{ secrets.AWS_S3_BUCKET }}" || true
           terraform import aws_iam_role.lambda_exec lambda_exec_role || true
           terraform import aws_dynamodb_table.history_table AirCareHistoryAQI || true
+          terraform import aws_lambda_function.aircare_backend "${{ secrets.LAMBDA_FUNCTION_NAME }}" || true
 
       - name: 🚀 Terraform Apply
         working-directory: ./terraform
+        env:
+          TF_VAR_openweather_api_key: ${{ secrets.OPENWEATHER_APIKEY }}
         run: terraform apply -auto-approve
 
       - name: 🚀 Deploy Lambda function
