--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,11 @@ jobs:
           cd backend
           npm test --silent
 
+      - name: 📁 Install frontend dependencies
+        run: npm ci --prefix frontend
+      - name: 🧪 Run frontend e2e tests
+        run: npm run test:e2e --prefix frontend
+
       - name: 🗃️ Cache Terraform plugins
         uses: actions/cache@v4
         with:
