fix workflow by generating lock file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,9 @@ jobs:
           npm test --silent
 
       - name: 📁 Install frontend dependencies
-        run: npm ci --prefix frontend
+        run: |
+          npm install --prefix frontend
+          npm ci --prefix frontend
       - name: 🧪 Run frontend e2e tests
         run: npm run test:e2e --prefix frontend
 
