fix: import lambda permission and log group

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,6 +117,8 @@ jobs:
           terraform import aws_iam_role.lambda_exec lambda_exec_role || true
           terraform import aws_dynamodb_table.history_table AirCareHistoryAQI || true
           terraform import aws_cloudfront_distribution.aircare_distribution "$CLOUDFRONT_DIST_ID" || true
+          terraform import aws_lambda_permission.apigw_lambda "$LAMBDA_FUNCTION_NAME/AllowAPIGatewayInvoke-v2" || true
+          terraform import aws_cloudwatch_log_group.lambda_logs "/aws/lambda/$LAMBDA_FUNCTION_NAME" || true
 
       - name: 🚀 Terraform Apply
         working-directory: ./terraform
