--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,20 +112,33 @@ jobs:
           TF_VAR_openweather_api_key: ${{ secrets.OPENWEATHER_APIKEY }}
         run: terraform apply -auto-approve
 
+      - name: 📤 Get Terraform outputs
+        id: tfout
+        working-directory: ./terraform
+        run: |
+          echo "api=$(terraform output -raw api_gateway_url)" >> $GITHUB_OUTPUT
+          echo "table=$(terraform output -raw dynamodb_table_name)" >> $GITHUB_OUTPUT
+          echo "role=$(terraform output -raw lambda_role_arn)" >> $GITHUB_OUTPUT
+
       - name: 🚀 Deploy Lambda function
         run: |
-          aws lambda update-function-code \
-            --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} \
-            --zip-file fileb://lambda.zip
+          if aws lambda get-function --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} >/dev/null 2>&1; then
+            aws lambda update-function-code \
+              --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} \
+              --zip-file fileb://lambda.zip
+          else
+            aws lambda create-function \
+              --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} \
+              --runtime nodejs18.x \
+              --role ${{ steps.tfout.outputs.role }} \
+              --handler index.handler \
+              --zip-file fileb://lambda.zip \
+              --environment Variables=TABLE_NAME=${{ steps.tfout.outputs.table }},OPENWEATHER_APIKEY=${{ secrets.OPENWEATHER_APIKEY }}
+          fi
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'ca-central-1'
-
-      - name: 📤 Get API Gateway URL
-        id: tfout
-        working-directory: ./terraform
-        run: echo "api=$(terraform output -raw api_gateway_url)" >> $GITHUB_OUTPUT
 
       - name: 🔧 Generate frontend config
         env:
