chore(ci): exclude tests from lambda package

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
       - name: 📦 Package Lambda
         run: |
           cd backend
-          zip -r ../lambda.zip . -x "*.git*" "*.zip"
+          zip -r ../lambda.zip . -x "*.git*" "*.zip" "tests/*"
           cd ..
 
       - name: 🔍 Verify Lambda package
